# collada_io

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: simple_geo_scene.rs  simple_geometry.rs
src/: collada.rs  geometry.rs  io.rs  lib.rs  meta.rs  scene.rs  util.rs
src/fx/: effect.rs  material.rs
